// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render styles for size lg 1`] = `
.c0 {
  font-size: 1em;
  border: none;
  padding: 0;
  color: #00c0a5;
  font-size: calc(1.125 * var(--lendi-ui-size));
  line-height: calc(24 / 18);
  font-family: 'Open Sans',sans-serif;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  background-color: inherit;
}

.c0:hover,
.c0:focus,
.c0:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #007363;
}

<Component
  size="lg"
>
  <styled.button
    size="lg"
  >
    <button
      className="c0"
      size="lg"
    />
  </styled.button>
</Component>
`;

exports[`Link should render styles for size md 1`] = `
.c0 {
  font-size: 1em;
  border: none;
  padding: 0;
  color: #00c0a5;
  font-size: var(--lendi-ui-size);
  line-height: calc(24 / 16);
  font-family: 'Open Sans',sans-serif;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  background-color: inherit;
}

.c0:hover,
.c0:focus,
.c0:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #007363;
}

<Component
  size="md"
>
  <styled.button
    size="md"
  >
    <button
      className="c0"
      size="md"
    />
  </styled.button>
</Component>
`;

exports[`Link should render styles for size sm 1`] = `
.c0 {
  font-size: 1em;
  border: none;
  padding: 0;
  color: #00c0a5;
  font-size: calc(0.875 * var(--lendi-ui-size));
  line-height: calc(20 / 14);
  font-family: 'Open Sans',sans-serif;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  background-color: inherit;
}

.c0:hover,
.c0:focus,
.c0:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #007363;
}

<Component
  size="sm"
>
  <styled.button
    size="sm"
  >
    <button
      className="c0"
      size="sm"
    />
  </styled.button>
</Component>
`;
